--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
+    "chart.js": "^4.4.7",
+    "emailjs-com": "^3.2.0",
     "next": "14.2.15",
     "next-sanity": "^9.8.42",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "sanity": "^3.71.2",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
