--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@hcaptcha/react-hcaptcha": "^1.11.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
+    "@supabase/supabase-js": "^2.48.1",
     "chart.js": "^4.4.7",
     "emailjs-com": "^3.2.0",
-    "next": "14.2.15",
+    "next": "^15.1.6",
     "next-sanity": "^9.8.42",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
@@ -27,6 +29,7 @@
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
